--- a/leap/package.json
+++ b/leap/package.json
@@ -28,6 +28,7 @@
     "leapjs": "^0.6.4",
     "lodash": "4.17.15",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rxjs": "^6.5.5",
     "yeelight-connector": "x.x.x"
   }
 }
